jira/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jira
  labels:
    app: jira
spec:
  selector:
    matchLabels:
      app: jira
  template:
    metadata:
      labels:
        app: jira
    spec:
      containers:
        - name: jira
          image: fc277073030/jira-servicedesk:v1
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              protocol: TCP
              containerPort: 8080
          volumeMounts:
            - mountPath: /var/atlassian/application-data/jira
              name: data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: jira-data
