jira/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: jira
spec:
  rules:
    - host: 192.168.5.241.nip.io
      http:
        paths:
          - backend:
              serviceName: jira
              servicePort: 8080
