jira/traefik-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroutebar
  namespace: default

spec:
  entryPoints:
    - web
  routes:
    - match: Host(`192.168.5.242.nip.io`) && PathPrefix(`/jira`)
      kind: Rule
      services:
        - name: jira
          port: 8080
          namespace: jira-server
